--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server",
+    "dev": "nodemon server"
   },
   "license": "ISC",
   "dependencies": {
@@ -20,6 +22,7 @@
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.2",
+    "nodemon": "^3.1.7",
     "path": "^0.12.7",
     "popups": "^1.1.3",
     "random-token": "0.0.8",
